# rust_web

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
local/minio/public/: policy.json
local/minio/public/default/: readme.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2019-11-06-045947_cards/: up.sql
src/: errors.rs  lib.rs  main.rs
src/apis/: card.rs  cards.rs  examples.rs  mod.rs
src/middlewares/: db_pool.rs  mod.rs
src/middlewares/requests/: authentication_infrastructure.rs  cloud_storage.rs  mod.rs
src/models/: models.rs  schema.rs
tests/: test1.rs
