[package]
name = "example"
version = "0.1.0"
authors = ["MasayaKanemoto <masaya.kanemoto@adglobe.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
listenfd = "0.3.3"
actix-web = "1.0.8"
diesel = { version = "1.4.3", features = ["postgres"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
failure = "0.1.6"
lazy_static = "1.4.0"
r2d2 = "0.8.6"
r2d2-diesel = "1.0.0"
reqwest = "0.9.22"
futures = "0.1.29"
rusoto_s3 = "0.41.0"
rusoto_core = "0.41.0"
base64 = "0.11.0"
